<resources>
    <string name="app_name" translatable="false">YouChat</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome_to_evan_chat">Welcome to Evan Chat</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="back">Back</string>
    <string name="credentials_not_entered">Please fill in all fields</string>
    <string name="successfully_logged_in">You where successfully logged in!</string>
    <string name="something_went_wrong">Something went wrong..</string>
    <string name="logging_in">Logging in…</string>
    <string name="please_wait_login">Please wait while we log you into your account…</string>
    <string name="confirm_email">Confirm email</string>
    <string name="passwords_no_match">Email addresses don\'t match!</string>
    <string name="verify_your_email">Verify your email, check inbox</string>
    <string name="registering_account">Registering account</string>
    <string name="please_wait_registert">Please wait while we register your account…</string>
    <string name="add_friends">Add friends</string>
    <string name="account_settings">Account settings</string>
    <string name="log_out">Log out</string>
    <string name="loading">Loading…</string>
    <string name="username">Username</string>
    <string name="forgot_password">Forgot password</string>
    <string name="send">Send</string>
    <string name="email_sent">Email sent!</string>
    <string name="sending_email">Sending email</string>
    <string name="please_wait_while_we_sent_email">Please wait while we send your reset email…</string>
    <string name="forgot_password_question">Forgot password?</string>
    <string name="set_profile_images">Set image</string>
    <string name="set_status">Set status</string>
    <string name="uploading_image">Uploading image</string>
    <string name="please_wait_upload_profile_image">Please wait while we upload your profile image</string>
    <string name="image_uploaded">Image uploaded</string>
    <string name="new_status">New status</string>
    <string name="edit_status">Edit status</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="status_updated">Status updated</string>
    <string name="friends">Friends</string>
    <string name="you_have_been_signed_out">You have been signed out!</string>
    <string name="username_already_exists">That username already exists!</string>
    <string name="search_by_email_user">Search user by email or username</string>
    <string name="username_not_long_enough">Username is not long enough</string>
    <string name="friend_requests">Friend requests</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="request_sent">Request sent!</string>
    <string name="back_symbol" translatable="false"><![CDATA[<]]></string>
    <string name="remove_friend">Remove friend</string>
    <string name="select_options">Select options</string>
    <string name="friend_removed">Friend removed</string>
    <string name="warning_will_delete_all_messages">WARNING: This will delete all messages</string>
</resources>
