<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".AccountSettingsActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/accountSettingsImageProfile"
        android:layout_width="250sp"
        android:layout_height="200sp"
        android:layout_marginTop="16dp"
        android:src="@drawable/user_icon"
        app:civ_border_color="@android:color/white"
        app:civ_border_width="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/accountSettingsTVUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/loading"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountSettingsImageProfile" />

    <TextView
        android:id="@+id/accountSettingsTVStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/loading"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountSettingsTVUsername" />

    <Button
        android:id="@+id/accountSettingsButtonImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_square"
        android:elevation="20dp"
        android:onClick="pickImage"
        android:padding="5dp"
        android:text="@string/set_profile_images"
        app:layout_constraintBottom_toTopOf="@+id/accountSettingsButtonBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/accountSettingsButtonStatus"
        app:layout_constraintTop_toBottomOf="@+id/accountSettingsTVStatus" />

    <Button
        android:id="@+id/accountSettingsButtonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_square"
        android:elevation="20dp"
        android:onClick="openMainActivity"
        android:padding="5dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/accountSettingsButtonStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_square"
        android:elevation="20dp"
        android:onClick="updateStatus"
        android:padding="5dp"
        android:text="@string/set_status"
        app:layout_constraintBaseline_toBaselineOf="@+id/accountSettingsButtonImage"
        app:layout_constraintEnd_toStartOf="@+id/accountSettingsButtonImage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>