<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".WelcomeActivity">

    <TextView
        android:id="@+id/mainTVWelcomeText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/welcome_to_evan_chat"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mainButtonSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_square"
        android:onClick="openRegisterActivity"
        android:padding="10dp"
        android:text="@string/sign_up"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:elevation="20dp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/mainButtonLogin"
        app:layout_constraintEnd_toStartOf="@+id/mainButtonLogin"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/mainButtonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_square"
        android:onClick="openLoginActivity"
        android:elevation="20dp"
        android:text="@string/login"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mainButtonSignUp" />

    <ImageView
        android:id="@+id/mainImageViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="64dp"
        android:layout_marginTop="64dp"
        app:layout_constraintBottom_toTopOf="@+id/mainButtonSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTVWelcomeText"
        app:srcCompat="@drawable/mainscreen_logo" />

</android.support.constraint.ConstraintLayout>